openapi controller: status shows managed resource references
